--- a/style.css
+++ b/style.css
@@ -1,17 +1,28 @@
-/* * {
-    border: 1px solid red;
-} */
+* {
+    /* border: 1px solid red; */
+}
+
+body {
+    margin: 0px;
+    display: flex;
+    font-family: Arial, Helvetica, sans-serif;
+}
 
 header {
     background-color: #1f2937;
     display: flex;
     align-items: center;
     color: #F9FAF8;
+    padding: 10px 150px 50px 150px;
+}
+
+.header-title {
+    padding: 0px;
+    margin: 0px;
 }
 
 nav {
-    margin-left: auto;
-    
+    margin-left: auto;    
 }
 
 ul {
@@ -27,6 +38,54 @@ a {
     color: #F9FAF8;
 }
 
+.hero {
+    background-color: #1f2937;
+    color: #F9FAF8;
+    padding: 30px 150px;
+    display: flex;
+    justify-content: space-around;
+    align-items: flex;
+    gap: 30px;
+    
+}
+
+.left-hero,
+.right-hero {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    padding: 10px 0px;
+    justify-content: center;
+    /* justify-content: space-between; */
+}
+
+.hero-headline {
+    margin: 0px;
+    font-size: 48px;
+    font-weight: bolder;
+}
+
+.hero-sub-heading {
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+.signup-button {
+    margin-top: auto;
+    padding: 10px 10px 10px 10px;
+    min-width: 150px;
+    border-radius: 10px;
+    align-self: flex-start;
+    background-color: #3882F6;
+    color: #F9FAF8;
+    font-size: 16px;
+    border: none;
+    
+
+}
+
 .hero-photo {
-    max-width: 25%;
+    max-width: 100%;
+    border-radius: 5%;
+    transform: scaleX(-1);
 }
