--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 header {
     background-color: #1f2937;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     color: #F9FAF8;
     padding: 10px 150px 50px 150px;
 }
@@ -55,12 +55,12 @@ a {
     display: flex;
     flex-direction: column;
     padding: 10px 0px;
-    justify-content: center;
+    /* justify-content: center; */
     /* justify-content: space-between; */
 }
 
 .hero-headline {
-    margin: 0px;
+    margin: 0px 0px 15px 00px;
     font-size: 48px;
     font-weight: bolder;
 }
@@ -68,18 +68,19 @@ a {
 .hero-sub-heading {
     font-size: 18px;
     color: #E5E7EB;
+    margin: 0px 0px 25px 0px;
 }
 
 .signup-button {
-    margin-top: auto;
     padding: 10px 10px 10px 10px;
     min-width: 150px;
     border-radius: 10px;
-    align-self: flex-start;
     background-color: #3882F6;
     color: #F9FAF8;
     font-size: 16px;
     border: none;
+    align-self: flex-start;
+    margin-top: auto;
     
 
 }
