--- a/style.css
+++ b/style.css
@@ -144,6 +144,8 @@ a {
 
 .quote {
     background-color: #e5e7eb;
+    display: flex;
+    justify-content: center;
 }
 .quote-text {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -154,4 +156,5 @@ a {
     font: 100;
     padding: 5rem 5rem 5rem 5rem;
     text-align: center;
+    max-width: 70rem;
 }
