--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 * {
     box-sizing: border-box;
-    /* border: 1px solid red; */
 }
 
 body {
@@ -105,19 +104,15 @@ a {
 }
 
 .info-box-container {
-    /* display: flex; */
-    /* align-self: center; */
-    /* justify-content: center; */
-    gap: 3.125rem;
-    /* border: 5px solid red; */
+    display: flex;
+    flex-direction: column;
 }
 
 .info-boxes {
     display: flex;
-    /* border: 2px solid red; */
-    justify-content: space-around;
     gap: 1rem;
-    margin: 0rem 0rem 1rem 0rem;
+    margin: 0rem 0rem 1cqb 0rem;
+    flex-wrap: wrap;
 }
 
 .info-box {
@@ -157,4 +152,40 @@ a {
     padding: 5rem 5rem 5rem 5rem;
     text-align: center;
     max-width: 70rem;
+}
+
+.call-to-action {
+    display: flex;
+    justify-content: center;
+    height: 20rem;
+    
+    /* text-align: center; */
+}
+
+.call-to-action-content {
+    flex: 1;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #3882F6;
+    border-radius: 1rem;
+    margin: 7rem 10rem 7rem 10rem;
+    color: white;
+}
+
+.call-to-action-heading {
+    margin: 0 0 0 0;
+}
+
+.call-to-action-text {
+    color: #E5E7EB;
+
+}
+
+.call-to-action-button {
+    background-color: #3882F6;
+    color: white;
+    padding: 0.3rem 0.5rem 0.5rem 0.5rem;
+    border: 2px solid white;
+    border-radius: 0.4rem;
 }
