--- a/style.css
+++ b/style.css
@@ -189,3 +189,13 @@ a {
     border: 2px solid white;
     border-radius: 0.4rem;
 }
+
+footer {
+    display: flex;
+    justify-content: center;
+    background-color: #1f2937;
+    color: white;
+    padding: 1rem 1rem 1rem 1rem;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: lighter;
+}
