--- a/style.css
+++ b/style.css
@@ -1,17 +1,16 @@
 * {
     box-sizing: border-box;
+    font-family: 'roboto';
 }
 
 body {
     margin: 0rem;
     display: flex;
-    font-family: Arial, Helvetica, sans-serif;
 }
 
 header {
     background-color: #1f2937;
     display: flex;
-    /* align-items: flex-start; */
     color: #F9FAF8;
     padding: 0.625rem 1.875rem 3.125rem 1.875rem;
 }
@@ -91,16 +90,13 @@ a {
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* justify-content: flex-start; */
     height: 31.25rem;
     padding-top: 3.125rem;
-    /* border: 5px solid green; */
 }
 
 .info-heading {
     font-size: 1.75rem;
     font-weight: bold;
-    /* border: 5px solid yellow; */
 }
 
 .info-box-container {
@@ -116,8 +112,6 @@ a {
 }
 
 .info-box {
-    /* flex: 1; */
-    /* display: flex; */
     width: 10rem;
     height: 10rem;
     border: 2px solid blue;
@@ -126,14 +120,12 @@ a {
 
 .info-box-sub-texts {
     display: flex;
-    /* border: 2px solid red; */
     justify-content: space-around;
     gap: 1rem;
 }
 
 .info-box-sub-text {
     width: 10rem;
-    /* border: 2px solid blue; */
     text-align: center;
 }
 
@@ -143,7 +135,6 @@ a {
     justify-content: center;
 }
 .quote-text {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: #1f2937;
     font-size: 36px;
     font-weight: lighter;
@@ -158,8 +149,6 @@ a {
     display: flex;
     justify-content: center;
     height: 20rem;
-    
-    /* text-align: center; */
 }
 
 .call-to-action-content {
@@ -196,6 +185,5 @@ footer {
     background-color: #1f2937;
     color: white;
     padding: 1rem 1rem 1rem 1rem;
-    font-family: 'Times New Roman', Times, serif;
     font-weight: lighter;
 }
